# FUNASR_runtime

./: .gitignore  CMakeLists.txt  ltzrun.sh  riscv-toolchain.cmake  test.py
include/: com-define.h  nncasewrapper.h
src/: CMakeLists.txt  ct-transformer.cpp  ct-transformer.h  fsmn-vad.cpp  fsmn-vad.h  precomp.h
